<resources>
    <string name="app_name">Raf</string>
    <string name="title_activity_login">Sign in</string>
    <string name="facebook_app_id">511466149039514</string>
    <string name="server_client_id">450132053315-l0gpp6e84oe93bu2evfcuo5v7mbr5ke2.apps.googleusercontent.com</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_get_book">GetBookActivity</string>
    <string name="title_activity_add_book">AddBookActivity</string>

    <!-- parse intitialization-->
    <string name="parse_AppID">E4KJFk3dW4oBSuyzfOHnw0oND4x86ilQOf5iczOy</string>
    <string name="parse_ClientKey">yhmGW190PwtEIxtRUNaDz9rB3IDR5Gp4rMF91DYy</string>

    <!-- NewBookRequest object -->
    <string name="new_book_request">NewBookRequest</string>
    <string name="parse_new_book_request_user">user</string>
    <string name="parse_new_book_request_book_name">bookName</string>

    <!-- parse book object -->
    <string name="parse_book">Book</string>
    <string name="parse_book_isbn">ISBN</string>
    <string name="parse_book_name">name</string>
    <string name="parse_book_description">description</string>
    <string name="parse_book_cover">cover</string>
    <string name="parse_book_rating">rating</string>
    <string name="parse_book_language">language</string>
    <string name="parse_book_copies">numberOfCopies</string>
    <string name="parse_book_available">availableCopies</string>
    <string name="parse_book_author">author</string>
    <string name="parse_book_genre">Genre</string>
    <string name="parse_book_featured">featured</string>
    <string name="parse_book_new">new</string>
    <string name="parse_book_popular">popular</string>
    <string name="parse_book_lower_case_name">lowerCaseName</string>

    <!-- parse genre object-->
    <string name="parse_genre">Genre</string>
    <string name="parse_genre_name">name</string>


    <!--parse DeliveryPoint object-->
    <string name="parse_deliveryPoint">DeliveryPoint</string>
    <string name="parse_deliveryPoint_address">address</string>
    <string name="parse_deliveryPoint_name">name</string>

    <!--Book activity intent-->
    <string name="book_intent_id">bookID</string>
    <string name="book_intent_name">bookName</string>
    <string name="book_intent_author">bookAuthor</string>
    <string name="book_intent_cover">bookCover</string>
    <string name="book_intent_description">bookDescription</string>
    <string name="book_intent_price">bookPrice</string>

    <!--More Activity intent-->
    <string name="more_intent">moreIntent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_get_points2">getPointsActivity2</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="parse_book_objectId">objectId</string>
    <string name="parse_book_price">price</string>
    <string name="title_activity_request_book">RequestBook</string>

    <string-array name="android_dropdown_arrays">
        <item>Select Delivery Point</item>
        <item>Makan - مكان</item>
    </string-array>

    <string name="makan_name">Makan - مكان</string>

</resources>
