...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Delivery Date"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_today_black_24dp"
                    android:id="@+id/delivery_date_button"
                    android:paddingRight="8dp"
                    android:clickable="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <TextView
...
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_done_white_24dp" />

...
