...
                                    android:background="@null"
                                    android:scaleType="fitStart"
                                    android:paddingRight="8dp"
                                    android:paddingLeft="8dp"
                                    android:adjustViewBounds="true"
                                    android:cropToPadding="false"
                                    android:id="@+id/getcopy" />


                                <ImageButton
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/addbutton"
...
                                    android:onClick="onClick2"
                                    android:scaleType="fitEnd"
                                    android:paddingRight="8dp"
                                    android:paddingLeft="8dp"
                                    android:cropToPadding="false"
                                    android:adjustViewBounds="true"
                                    android:id="@+id/addCopy" />

                            </LinearLayout>




...
