<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.MCIT.raf.GetBookActivity"
    tools:showIn="@layout/activity_get_book">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorPrimary"
                ></View>






                    <ImageView
                        android:layout_width="wrap_content"
                        android:adjustViewBounds="true"
                        android:layout_height="350dp"
                        android:id="@+id/cover"
                        android:layout_centerHorizontal="true"
                        android:transitionName="cover"
                        android:src="@drawable/bbb"/>







        </RelativeLayout>







<LinearLayout
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_height="wrap_content">



    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:layout_height="wrap_content">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentLeft="true"
            android:text="Borrow"/>

        <android.support.v7.widget.SwitchCompat
            android:layout_centerInParent="true"
            android:id="@+id/switch_compat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:checked="true" />


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentLeft="true"
            android:text="Purchase"/>




    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:src="@drawable/ic_local_atm_black_24dp"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignParentLeft="true"
            android:text="Points Required"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="30"
                android:layout_marginRight="3dp"
                android:id="@+id/points_text"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/imageView2"
                android:layout_toStartOf="@+id/imageView2" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/coin"
                android:id="@+id/imageView2"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/linear_get_point"
        android:layout_marginTop="8dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:src="@drawable/ic_album_black_24dp"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignParentLeft="true"
            android:text="Your Points"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="30"
                android:layout_marginRight="3dp"
                android:id="@+id/your_points_text"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/imageView2"
                android:layout_toStartOf="@+id/imageView2" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/coin"
                android:id="@+id/imageView3"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@android:color/darker_gray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/start_date_button"
        android:layout_marginTop="8dp"
        android:paddingLeft="20dp"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Delivery Date"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_today_black_24dp"
            android:id="@+id/delivery_date_button"
            android:paddingRight="8dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignParentLeft="true"
            android:id="@+id/delivery_date_title"
            android:text="Pick Delivery Date"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/start_date_text"
            android:layout_centerVertical="true"
            android:paddingLeft="16dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/end_date_button"
        android:layout_marginTop="8dp"
        android:paddingLeft="20dp"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:paddingBottom="8dp"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Delivery Date"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_today_black_24dp"
            android:paddingRight="8dp"
            android:clickable="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignParentLeft="true"
            android:id="@+id/pick2"
            android:text="Pick End Date"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/end_date_text"
            android:layout_centerVertical="true"
            android:paddingLeft="16dp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:src="@drawable/ic_place_black_24dp"/>

        <Spinner
            android:id="@+id/pickup_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">


        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avloadingIndicatorView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:visibility="gone"
            app:indicator="BallClipRotate"
            app:indicator_color="@color/colorAccent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/getBook_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_done_white_24dp" />





    </LinearLayout>

</LinearLayout>
    </LinearLayout>
</ScrollView>
<!--</LinearLayout>-->
